fix: agm 50vw on smaller screens

--- a/src/app/main/main-page/main-page.component.css
+++ b/src/app/main/main-page/main-page.component.css
@@ -4,7 +4,6 @@
 
 }
 .card{
-  max-width: 1280px;
   margin: 0 4vw;
 }
 .secondary{
